# payment-scheduler

./: Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
app/: main.py
app/api/routes/: dlq.py  health.py  jobs.py  subscriptions.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/domain/: models.py
app/domain/jobs/: state_machine.py
app/infrastructure/bunq/: client.py
app/infrastructure/db/: models.py  session.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 0001_initial.py  0002_retry_after_and_constraints.py  0003_updated_at_trigger.py  0004_idempotency_key_attempt.py
app/infrastructure/messaging/: workers.py
app/infrastructure/redis/: leader.py
app/workers/: executor.py  recovery.py  scheduler.py
observability/: prometheus.yml  setup.py
tests/failure/: test_failure_injection.py
tests/integration/: conftest.py  test_executor.py
tests/unit/: test_domain.py  test_leader_election.py  test_scheduler_logic.py  test_state_machine.py
