[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "payment-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "redis[hiredis]>=5.0.4",
    "httpx>=0.27.0",
    "croniter>=2.0.5",
    "pytz>=2024.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-asyncpg>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "tenacity>=8.3.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
